

<?xml version="1.0"?>
<package format="2">
  <name>sensor_gui</name>
  <version>0.0.0</version>
  <description>Sensor GUI for RHex Robot</description>
  <maintainer email="aadidkadam415@gmail.com">aaditi</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Required dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>PyQt5</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

